[package]
name = "cryptonode"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A decentralized bandwidth sharing and crypto management system for microcontrollers"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"

# Bluetooth
btleplug = "0.11"  # Cross-platform Bluetooth LE
tokio-stream = "0.1"

# Cryptography
ring = "0.17"      # Cryptographic operations
ed25519-dalek = "2.1"  # For crypto signatures
aes-gcm = "0.10"   # For AES-256 encryption
sha2 = "0.10"      # For hashing
hex = "0.4"        # For hex encoding/decoding

# Wallet Management
bitcoin = "0.31"   # Bitcoin operations
ethereum-types = "0.14"  # Ethereum types
web3 = "0.19"      # Ethereum interactions

# State Management
sled = "0.34"      # Embedded database
bincode = "1.3"    # Binary serialization

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# API Types
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[features]
default = ["bluetooth", "crypto", "bandwidth"]
bluetooth = []
crypto = []
bandwidth = []

[[bin]]
name = "cryptonode"
path = "src/main.rs"

[lib]
name = "cryptonode"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 